# nem-bidding-analysis

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
analysis_code/: duid_registration.py
analysis_scripts/: bid_zip_size.py  duid_registration.py  rebidding_analysis.py  rebidding_polars.py
data/duids/: cleaned_gen_loads.csv  manual_duid_techs.csv  non_genloads_duid_providers_with_techs.csv  opennem_duids.csv
data/mappings/: color_techtype_mapping.json  non_genloads_duid_providers.csv  non_genloads_duid_providers_with_techs.csv  opennem_techtype_mapping.json  techtype_simple_mapping.json
data/processed/: agg_bess_bid_data_20210604.csv  agg_bess_bid_data_20230604.csv  agg_bess_dispatch_data_20210604.csv  agg_bess_dispatch_data_20230604.csv  bidperoffer_monthly_zip_size_2012_2022.csv  rebid_counts_6_2013.parquet  rebid_counts_6_2013_300.parquet  rebid_counts_6_2013_3600.parquet  rebid_counts_6_2014.parquet  rebid_counts_6_2015.parquet  rebid_counts_6_2015_300.parquet  rebid_counts_6_2015_3600.parquet  rebid_counts_6_2016.parquet  rebid_counts_6_2017.parquet  rebid_counts_6_2017_300.parquet  rebid_counts_6_2017_3600.parquet  rebid_counts_6_2018.parquet  rebid_counts_6_2019.parquet  rebid_counts_6_2019_300.parquet  rebid_counts_6_2019_3600.parquet  rebid_counts_6_2020.parquet  rebid_counts_6_2021.parquet  rebid_counts_6_2021_300.parquet  (+6 more)
data_scripts/: create_parquet_partitions_by_column.py  get_bess_bidding_data.py  get_duid_to_tech.py  get_partitioned_data.py  get_raw_data.py  opennem_facilities.py
plot_scripts/: bid_zip_size.py  plot_bess_bidding.py  plot_rebids_across_same_month_across_years.py
scripts/: create_parquet_partitions_by_TRADINGDATE.py  create_parquet_partitions_by_column.py
