[tool.poetry]
name = "nem-bidding-analysis"
version = "0.1.0"
description = "Tools to analyse NEM (re)bid data and bidding analysis"
authors = ["prakaa <abiprakash007@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "nem_bidding_analysis"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1"
pandas = "*"
matplotlib = "^3"
tqdm = "^4"
polars = {extras = ["complete"], version = "*"}
nemosis = "^3.4"
mms-monthly-cli = "^0.2"
user-agent = "^0.1"
pydantic = "*"
simplejson = "*"
nem-bidding-dashboard = {git = "https://github.com/UNSW-CEEM/nem-bidding-dashboard.git"}
plotly = "^5"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
ipdb = "*"
black = "^23"
isort = "^5"
ipykernel = "^6"
mypy = "^1"
flake8 = "^6"
ipython = "^8"
nbformat = ">=4.2"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
